# resound

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.draft.md  README.md  alembic.ini  docker-compose.yml  fulfil_outreach.md  pyproject.toml
.claude/: settings.json  settings.local.json
.codex/: config.toml
.taskmaster/: config.json  state.json
.taskmaster/scripts/: apply-task1-grilling.ps1  apply-task16-grilling.ps1  apply-task2-grilling.ps1  apply-task3-grilling.ps1  apply-task9-7.ps1  apply-task9-grilling.ps1
.taskmaster/tasks/: task_001.md  task_002.md  task_003.md  task_004.md  task_005.md  task_006.md  task_007.md  task_008.md  task_009.md  task_010.md  task_011.md  task_012.md  task_013.md  task_014.md  task_015.md  task_016.md  task_017.md  task_018.md  task_019.md  task_020.md  task_021.md  task_022.md  task_023.md  task_024.md  task_025.md  task_026.md  task_027.md  task_028.md  task_029.md  tasks.json
Resound-UI/Builtiful-Interface/: package.json  pnpm-lock.yaml  replit.md
brands/fulfil/: brand.yaml  people.yaml  routing.yaml  sources.yaml  (+2 more)
config/: models.yaml
docs/: ARCHITECTURE.md  PRD-demo.md  PRD-openrouter.md  architecture.html  competitor-analysis.md  design_decisions.md
migrations/: env.py
scripts/: connect_composio_reddit.py  fetch_live_social_smoke_snapshot.py  inspect_ignored.py  inspect_routed.py  migrate_live_social_smoke_to_postgres.py  reclassify_fallbacks.py
tests/: test_classifier.py  test_cli_source_sync.py  test_configuration.py  test_g2_parser.py  test_gateway.py  test_pipeline.py  test_twitter_source.py
(+212 files in other folders)
