[project]
name = "resound"
version = "0.1.0"
description = "Customer-signal intelligence layer that routes voice-of-customer to the right internal owner."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Resound"},
]
dependencies = [
    "openai>=1.40.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "praw>=7.7.0",
    "composio>=0.7.0",
    "tweepy>=4.14.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "apscheduler>=3.10.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
resound = "resound.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resound"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
